# permit_os

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.agents  Dockerfile.render  LICENSE  README.md  agent_config.yaml.example  docker-compose.yml  pyproject.toml  render.env.example
agents/: __init__.py
agents/building/: agent.py
agents/conductor/: agent.py
agents/jurisdiction/: agent.py
agents/packager/: agent.py
agents/site_environmental/: agent.py
api/: __init__.py  main.py  models.py
api/routes/: audit.py  cases.py  (+2 more)
docs/: DEMO_VIDEO_SCRIPT.md  DEPLOY.md  PermitOS-Project-Document.md  PermitOS-Technical-Strategy.md  band-agents.md  permitos-build-plan.txt
landing/: README.md  index.html
scripts/: agent_supervisor.sh  ensure_agent_config.sh  print_deploy_config.py  run_background.ps1  start_agents_docker.sh  start_all_agents.ps1  start_cursor_proxy.ps1  start_render_full.sh  start_services_background.ps1  stop_services.ps1  verify_aiml_llm.py  verify_band_setup.py  verify_baseten_llm.py  verify_cerebras_llm.py  verify_cursor_llm.py  verify_groq_llm.py  verify_hf_llm.py  verify_ollama_llm.py  verify_ollamafreeapi_llm.py  verify_openai_llm.py
shared/: __init__.py  config.py
tests/: conftest.py  test_band_extract.py  test_intake.py  test_knowledge.py  test_manhattan_rule_library.py  test_packager_normalize.py  test_permit_review_service.py  test_pipeline.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
(+103 files in other folders)
