[project]
name = "permitos"
version = "0.1.0"
description = "Multi-agent permitting command center for real estate developers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "ollamafreeapi>=0.1.4",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
band = [
    "thenvoi @ git+https://github.com/thenvoi/thenvoi-sdk-python.git",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "anthropic>=0.39.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
crewai = [
    "crewai>=0.86.0",
]
all = [
    "permitos[dev,band,crewai]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["shared", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
